--- a/app/templates/item_detail.html
+++ b/app/templates/item_detail.html
@@ -111,6 +111,7 @@
     <!-- Navigation Button Container -->
     <div class="button-container">
         <button class="button" onclick="window.location.href='{{ url_for('item.view_all_items') }}'">All Items</button>
+		<button class="button" onclick="window.location.href='/'">Home</button>
     </div>
 
     <!-- Centered Form -->
@@ -138,6 +139,7 @@
         <!-- Centered Save Changes Button -->
         <div class="button-row">
             <button type="submit">Save Changes</button>
+			
         </div>
     </form>
 </body>
