--- a/app/templates/add_item.html
+++ b/app/templates/add_item.html
@@ -113,6 +113,7 @@
     <!-- Button Container -->
     <div class="button-container">
         <button class="button" onclick="window.location.href='{{ url_for('item.view_all_items') }}'">All Items</button>
+		<button class="button" onclick="window.location.href='/'">Home</button>
     </div>
 
     <!-- Centered Form -->
