--- a/app/templates/edit_item.html
+++ b/app/templates/edit_item.html
@@ -110,7 +110,9 @@
 
     <!-- Navigation Button Container -->
     <div class="button-container">
+        <button class="button" onclick="window.location.href='{{ url_for('shop.city_shops', city_id=city.city_id) }}'">Manage Shops</button>
         <button class="button" onclick="window.location.href='{{ url_for('item.view_all_items') }}'">All Items</button>
+        <button class="button" onclick="window.location.href='/'">Home</button>
     </div>
 
     <!-- Centered Form -->
