--- a/app/templates/edit_shop.html
+++ b/app/templates/edit_shop.html
@@ -99,7 +99,6 @@
 
     <!-- Navigation Button Container -->
     <div class="button-container">
-        <button class="button" onclick="window.location.href='{{ url_for('shop.city_shops', city_id=shop.city_ids[0]) }}'">Manage Shops</button>
         <button class="button" onclick="window.location.href='{{ url_for('shop.view_all_shops') }}'">All Shops</button>
         <button class="button" onclick="window.location.href='/'">Home</button>
     </div>
@@ -129,7 +128,7 @@
             {% for city in cities %}
             <div>
                 <input type="checkbox" id="city_{{ city.city_id }}" name="city_ids" value="{{ city.city_id }}"
-                    {% if city.city_id in shop.city_ids %}checked{% endif %}>
+                    {% if city.city_id in linked_city_ids %}checked{% endif %}>
                 <label for="city_{{ city.city_id }}">{{ city.name }} ({{ city.size }})</label>
             </div>
             {% endfor %}
