Fixed ALL delete buttons
All navigtaion on adding and deleting is up, linkage is not, and eidting is not accesible ATM

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -104,7 +104,7 @@
 
     <!-- Button Container -->
     <div class="button-container">
-        <button class="button" onclick="navigateTo('{{ url_for('city.add_city') }}')">Add New City</button>
+        <button class="button" onclick="navigateTo('{{ url_for("city.add_city") }}')">Add New City</button>
         <button class="button" onclick="navigateTo('/')">Home</button>
     </div>
 
