--- a/app/templates/view_shops.html
+++ b/app/templates/view_shops.html
@@ -105,7 +105,7 @@
 
     <!-- Navigation Button Container -->
     <div class="button-container">
-        <button class="button" onclick="window.location.href='{{ url_for('shop.add_shop') }}'">Add New Shop</button>
+        <button class="button" onclick="window.location.href='{{ url_for("shop.add_shop") }}'">Add New Shop</button>
         <button class="button" onclick="window.location.href='/'">Home</button>
     </div>
 
